<resources>
    <string name="app_name">NotesAppTMS</string>
    <string name="logo_name">Spiice</string>
    <string name="logo_title">Spiice</string>
    <string name="title_login">Log-in</string>
    <string name="title_signup">Sign-up</string>
    <string name="button_discover">Discover the platform</string>
    <string name="button_login">Log-in</string>
    <string name="button_signup">Sign-up</string>
    <string name="hint_email_login">Email</string>
    <string name="hint_password_login">Password</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="text_login">You have an account ? <b>Log-in</b></string>
    <string name="text_signup">You have an account ? <b>Log-in</b></string>
    <string name="text_return">Return to Sign-up</string>

    <string name="error_empty_text">Empty text field</string>
    <string name="error_length_text">Length should be min 3 max 255</string>
    <string name="error_simbols_text">Error simbols</string>

</resources>