<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id_main_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background_36" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/red_hat_display_medium"
        android:textSize="30sp"
        android:layout_gravity="center|top"
        android:layout_marginTop="100dp"
        android:text="@string/title_signup" />

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginTop="200dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/id_first_name"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:textSize="18sp"
            android:layout_gravity="center|top"
            android:hint="@string/hint_first_name" />

        <EditText
            android:id="@+id/id_last_name"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:textSize="18sp"
            android:layout_gravity="center|top"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_last_name" />

        <EditText
            android:id="@+id/id_email_signup"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:textSize="18sp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center|top"
            android:hint="@string/hint_email_login" />

        <EditText
            android:id="@+id/id_password_signup"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:textSize="18sp"
            android:layout_gravity="center|top"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_password_login" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="70dp">

        <Button
            android:id="@+id/id_button_signup"
            android:layout_width="263dp"
            android:layout_height="50dp"
            android:text="@string/button_signup"
            android:layout_gravity="center_horizontal"
            android:background="#9378FF"
            app:cornerRadius="8dp"            />

        <TextView
            android:id="@+id/id_text_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_signup"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"/>

    </LinearLayout>

</FrameLayout>